Update project file, CHANGELOG.md, README.md and README.txt,

--- a/src/lib/iPdfWriter/iPdfWriter.Abstractions.Writer/iPdfWriter.Abstractions.Writer.csproj
+++ b/src/lib/iPdfWriter/iPdfWriter.Abstractions.Writer/iPdfWriter.Abstractions.Writer.csproj
@@ -14,8 +14,13 @@
     <Description>Common Writer Abstractions</Description>
     <Copyright>Copyright © 2022</Copyright>
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
+    <PackageIcon>icon.png</PackageIcon>
     <LangVersion>latest</LangVersion>
   </PropertyGroup>
+
+  <ItemGroup>
+    <None Include="icon.png" Pack="true" Visible="false" PackagePath="" />
+  </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\..\iTin\iTin.Core\iTin.Core\iTin.Core.csproj" />
